--- a/style.css
+++ b/style.css
@@ -62,7 +62,6 @@ body {
     z-index: 1;
     border-bottom: 2px solid white;
     grid-area: hd;
-    
 }
 
 #menu {
@@ -149,6 +148,9 @@ li a:hover {
 
 #pool-title a:hover {
     font-size: 1.7rem;
+}
+#logo:hover {
+    text-decoration: underline;
 }
 .container-2 {
     background-image: url("images/circle-image-600.png");
@@ -248,6 +250,16 @@ footer {
 /* Playground page */
 .background-playground {
     background-color: rgba(107, 170, 128, 0.877);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    width: 100%;
+    height: 100vh;
+}
+/* Gym page */
+.background-gym {
+    background-color: rgba(88, 109, 126, 0.795);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
