Add new text in media queries

--- a/style.css
+++ b/style.css
@@ -434,7 +434,7 @@ footer {
         margin-bottom: 2%;
     }
 
-    #pool-title {
+    #pool-title, #playground-title, #gym-title, #bar-title {
         font-size: 1.4em;
     }
     .intro-text-box, .intro-text-box1 {
@@ -443,7 +443,7 @@ footer {
     .footer {
         font-size:.8em;
     }
-    .pool-text {
+    .pool-text, .playground-text, .gym-text, .bar-text {
         font-size: .75em;
     }   
 }
@@ -480,45 +480,45 @@ body {
     .footer {
     font-size: .9em;  
     }
-    .pool-text {
+    .pool-text, .playground-text, .gym-text, .bar-text  {
         font-size: .8rem;
         grid-template-columns: minmax(auto, 18em);
         grid-template-rows:minmax(auto, 15em);
     }
-    #pool-title {
+    #pool-title, #playground-title, #gym-title, #bar-title {
         font-size: 1.45em;
     }
 }
 
 @media screen and (max-width: 1100px) and (min-width: 1000px){
-    .pool-text {
+    .pool-text, .playground-text, .gym-text, .bar-text {
         font-size: .8rem;
     }
-    #pool-title {
+    #pool-title, .playground-title, .gym-title, .bar-title {
         font-size: 1.5em;
     }
 }
 @media only screen and (max-width: 1200px) and (min-width: 1100px) {
-    .pool-text {
+    .pool-text, .playground-text, .gym-text, .bar-text {
         font-size: .9rem;
     }
-    #pool-title {
+    #pool-title, .playground-title, .gym-title, .bar-title {
         font-size: 1.7em;
     }    
 }       
 @media only screen and (max-width: 1300px) and (min-width: 1200px) {
-    .pool-text {
+    .pool-text, .playground-text, .gym-text, .bar-text  {
         font-size: 1rem;
     }
-    #pool-title {
+    #pool-title, #playground-title, #gym-title, #bar-title {
         font-size: 1.8em;
     }    
 }       
 @media only screen and (max-width: 1600px) and (min-width: 1300px) {
-    .pool-text {
+    .pool-text, .playground-text, .gym-text, .bar-text  {
         font-size: 1.1rem;
     } 
-    #pool-title {
+    #pool-title, #playground-title, #gym-title, #bar-title {
         font-size: 1.9em;
     }   
 }  
