--- a/style.css
+++ b/style.css
@@ -494,7 +494,7 @@ body {
     .pool-text, .playground-text, .gym-text, .bar-text {
         font-size: .8rem;
     }
-    #pool-title, .playground-title, .gym-title, .bar-title {
+    #pool-title, #playground-title, #gym-title, #bar-title {
         font-size: 1.5em;
     }
 }
@@ -502,7 +502,7 @@ body {
     .pool-text, .playground-text, .gym-text, .bar-text {
         font-size: .9rem;
     }
-    #pool-title, .playground-title, .gym-title, .bar-title {
+    #pool-title, #playground-title, #gym-title, #bar-title {
         font-size: 1.7em;
     }    
 }       
