--- a/style.css
+++ b/style.css
@@ -403,21 +403,27 @@ footer {
             cursor: pointer;
             text-decoration:none;
 }
-div .join-form {
+
+.join-form {
     max-width: 500px;
     width: 100%;
-    background: red;
-    margin: 20px auto;
-    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.39);
+    background:rgba(230, 219, 209, 0.6); ;
+    margin:20px auto;
+    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.486);
+    border-radius: 20px;
     padding: 30px;
   }
   #form-title{
+      font-family:Montserrat, sans-serif;
     font-size: 1em;
     margin-bottom: 25px;
     color: gray;
     font-weight: bold;
     text-transform: uppercase;
     text-align: center;
+  }
+  label {
+      font-family: Montserrat, sans-serif;
   }
 
 /* Playground page */
