--- a/style.css
+++ b/style.css
@@ -403,9 +403,12 @@ footer {
             cursor: pointer;
             text-decoration:none;
 }
+input {
+    width: 300px;
+}
 
 .join-form {
-    max-width: 500px;
+    max-width: 600px;
     width: 100%;
     background:rgba(230, 219, 209, 0.6); ;
     margin:20px auto;
@@ -414,7 +417,7 @@ footer {
     padding: 30px;
   }
   #form-title{
-      font-family:Montserrat, sans-serif;
+    font-family:Montserrat, sans-serif;
     font-size: 1em;
     margin-bottom: 25px;
     color: gray;
@@ -424,7 +427,14 @@ footer {
   }
   label {
       font-family: Montserrat, sans-serif;
+      font-size: .9em;
   }
+ .fieldinput {
+     margin: 10px 0 10px 0;
+ }
+ #checkbox { 
+     width: 20px;
+ }
 
 /* Playground page */
 .background-playground {
