Change footer image

--- a/style.css
+++ b/style.css
@@ -33,8 +33,7 @@ body {
 }
 
 .background {
-    background-image: url('images/shutterstock_1712342506.jpg');
-    background-color: rgba(255, 255, 255, 0.356);
+    background-color: rgb(145, 101, 60);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -289,11 +288,15 @@ li a:hover {
 /* Footer */
 
 footer {
-    background-color: rgba(230, 219, 209, 0.6);
-    padding: 20px 0 20px 0;
-    border: 2px solid white;
-    grid-area: foot;
-    margin-top: 20px;
+        background-image: url("images/pug.jpg");
+        background-position-y: -150px;
+        min-height: 200px;
+        padding: 20px 0 20px 0;
+        border: 2px solid white;
+        grid-area: foot;
+        margin-top: 20px;
+        position: relative;
+        z-index: 100;
 }
 .footer {
     bottom: 0;
@@ -304,7 +307,9 @@ footer {
     color: white;
     font-size: calc(1rem+1vw);
     letter-spacing: 5px;
+    position: relative;
 }
+
 
 /* Pool page */
 .background-pool {
